reimplement mobileNav + fixed tiny whitespace between nav and content

--- a/hotel/src/app/main.css
+++ b/hotel/src/app/main.css
@@ -44,13 +44,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 14px;
-    background-color: rgba(0, 0, 0, 0.2); 
+    background-color: #001C3F;
     position: fixed; 
     top: 0; 
     left: 0;
     right: 0;
-    z-index: 1000; 
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); 
+    z-index: 1000;
   }
   
   .nav-container ul {
@@ -77,6 +76,84 @@
     width: 60px; 
     height: auto;
     margin-left: 30px;
+  }
+
+  .nav-container-mobile {
+    display: none;
+  }
+  @media (max-width: 680px) {
+      .nav-container {
+        display: none;
+      }
+      @keyframes slide-in {
+        0% {top: -100%;}
+        100% {top: 0%}
+      }
+      @keyframes slide-out {
+        0% {top: 0%;}
+        100% {top: -100%}
+      }
+      @keyframes font-slide {
+        0% { opacity: 0; transform: translateX(-25px); }
+        100% { opacity: 1; transform: translateX(0px); }
+      }
+      .nav-container-mobile {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        padding: 14px;
+        background-color: #001C3F;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: 0px;
+        z-index: 1000;
+      }
+      .overlay-hidden {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        background-color: #001C3F;
+        top: 0;
+        left: 0;
+        right: 0;
+        overflow: scroll;
+        animation: slide-in 0.375s ease-in-out;
+      }
+      .overlay-shown {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        background-color: #001C3F;
+        top: 0;
+        left: 0;
+        right: 0;
+        overflow: scroll;
+        animation: slide-out 0.375s ease-in-out;
+      }
+      .nav-button-mobile {
+        all: unset;
+        color: white; 
+        text-decoration: none; 
+        padding: 10px 20px;
+        font-family: 'Crimson Text', serif; 
+        font-size: 24px;
+        background: none;
+      }
+      .mobile-menu {
+        margin-top: 83px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+      }
+      .nav-button {
+        font-size: 3rem;
+        opacity: 0;
+        animation: font-slide 1s forwards;
+      }
   }
 /* -------------------------------------------------- */
 
@@ -317,11 +394,7 @@ Button:hover {
 /* -------------------- Home Page Search ------------------------------ */
 .search-page{
   background-color: white;
-  margin-top: 83px;
-}
-
-.nav-container {
-  background-color: #001C3F; 
+  margin-top: 82px;
 }
 
 .search-container {
@@ -400,9 +473,6 @@ display: inline;
 /* -------------------------------------------------- */
 
 /* -------------------- Calendar ------------------------------ */
-.calendar {
-/* unstylized */
-}
 
 .calendar-input {
 background-color: #F3F3F3;
@@ -420,9 +490,6 @@ cursor: pointer;
 /* -------------------------------------------------- */
 
 /* -------------------- Dropdown Menu ------------------------------ */
-.dropdown {
-/* unstylized */
-}
 
 .dropdown-button {
 background-color: #F3F3F3;
